# powernote

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ansible.cfg  docker-compose.yml  pyproject.toml
ansible/: ansible.cfg
ansible/inventories/: production.example.yml
ansible/playbooks/: deploy.yml
ansible/roles/fail2ban/defaults/: main.yml
ansible/roles/fail2ban/files/: fail2ban-telegram-notify
ansible/roles/fail2ban/handlers/: main.yml
ansible/roles/fail2ban/tasks/: main.yml
ansible/roles/fail2ban/templates/: powernote-telegram.conf.j2  sshd.local.j2
ansible/roles/powernote/defaults/: main.yml
ansible/roles/powernote/handlers/: main.yml
ansible/roles/powernote/tasks/: main.yml
ansible/roles/security/defaults/: main.yml
ansible/roles/security/handlers/: main.yml
ansible/roles/security/tasks/: main.yml
ansible/roles/security/templates/: ssh-socket.conf.j2  sshd-port.conf.j2
grafana/dashboards/: powernote-health.json
grafana/provisioning/dashboards/: powernote.yml
grafana/provisioning/datasources/: postgres.yml
src/powernote/: ai.py  bot.py  config.py  main.py  metrics_sync.py  models.py  storage.py
