[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powernote"
version = "0.6.2"
description = "Personal AI voice diary with nutrition and fitness tracking"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10,<4",
    "openai>=1.80,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
]

[project.scripts]
powernote = "powernote.main:main"

[tool.setuptools.packages.find]
where = ["src"]
