[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powernote"
version = "0.7.0"
description = "Personal AI voice diary with nutrition and fitness tracking"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10,<4",
    "openai>=1.80,<2",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
]

[project.scripts]
powernote = "powernote.main:main"
powernote-metrics-sync = "powernote.metrics_sync:main"

[tool.setuptools.packages.find]
where = ["src"]
